--- a/src/components/LateralMenu/index.scss
+++ b/src/components/LateralMenu/index.scss
@@ -1,56 +1,84 @@
 .lateral-menu {
   position: fixed;
-  right: 0;
+  right: -25.2%;
   z-index: 100;
   height: 100%;
   width: 25vw;
   background-color: #fff;
 
-  .close {
-    text-align: end;
-    padding: 10px;
-    font-weight: bold;
-    font-size: 20px;
+  -webkit-transition: all 0.3s ease;
+  -moz-transition: all 0.3s ease;
+  -ms-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  transition: all 0.3s ease;
 
-    .close-x {
-      cursor: pointer;
+  &.active {
+    right: 0;
+  }
+
+  .open-icon {
+    position: absolute;
+    top: calc(100vh / 2);
+    transform: translateY(-50%);
+    left: -4.5%;
+    width: 5%;
+    cursor: pointer;
+
+    img {
+      width: 100%;
     }
   }
 
-  .items {
-    display: flex;
-    justify-content: space-between;
+  .menu {
+    width: 100%;
+    height: 100%;
 
-    .menu-tab {
-      width: 100%;
-      display: flex;
-      flex-direction: column;
+    .close {
+      text-align: end;
+      padding: 10px;
+      font-weight: bold;
+      font-size: 20px;
 
-      .menu-tab-title {
-        text-align: center;
+      .close-x {
         cursor: pointer;
-        background-color: #cfd4d1;
-        border-bottom: 1px solid #000;
       }
+    }
 
-      &.selected {
+    .items {
+      display: flex;
+      justify-content: space-between;
+
+      .menu-tab {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+
         .menu-tab-title {
-          border-color: #000;
-          border-style: solid;
-          border-width: 0px;
-          border-left-width: 1px;
-          border-top-width: 1px;
-          border-right-width: 1px;
-          background-color: unset;
+          text-align: center;
+          cursor: pointer;
+          background-color: #cfd4d1;
+          border-bottom: 1px solid #000;
+        }
+
+        &.selected {
+          .menu-tab-title {
+            border-color: #000;
+            border-style: solid;
+            border-width: 0px;
+            border-left-width: 1px;
+            border-top-width: 1px;
+            border-right-width: 1px;
+            background-color: unset;
+          }
         }
       }
     }
-  }
 
-  .content {
-    width: 100%;
-    height: 100%;
-    border-left: 1px solid #000;
-    padding-top: 25px;
+    .content {
+      width: 100%;
+      height: 100%;
+      border-left: 1px solid #000;
+      padding-top: 25px;
+    }
   }
 }
